# Chronos-Descent

./: .gitignore  RustScript.gdextension  battle_system.gdextension  icon.svg.import  project.godot
Assets/: player.png.import  start_menu_bg.png.import  test_target.png.import
Scenes/: autoload.tscn  battle.tscn  battle_system.tscn  bg_texture.tres  player.tscn  start_menu.tscn  test_enemy.tscn  test_game.tscn  user_interface.tscn
Scenes/entity/: dummy.tscn  player.tscn
Scenes/player/: player.tscn
Scripts/: battle_system.gd  dummy.gd  player.gd
Scripts/battle_system/: .gitignore  Cargo.toml  flake.nix
Scripts/battle_system/src/: bundle.rs  event.rs  lib.rs  resource.rs  utils.rs
Scripts/battle_system/src/component/: damage.rs  effect.rs  equipment.rs  instance.rs  instance_id.rs  mod.rs  stats.rs  weapon.rs
Scripts/battle_system/src/entity/entity/: api.rs  inheritance.rs  mod.rs
Scripts/battle_system/src/entity/projectile/: inheritance.rs  mod.rs
Scripts/battle_system/src/event/: effect.rs  mod.rs  register.rs  stats.rs
Scripts/battle_system/src/node/: entity.rs  mod.rs  projectile.rs
Scripts/battle_system/src/system/: effect.rs  mod.rs  stats.rs  system.rs  trigger.rs  update.rs
Scripts/node/: Entity.cs
Scripts/resource/: Ability.cs  BaseAbility.cs  (+5 more)
Scripts/rust-script/: Cargo.toml
Scripts/rust-script/src/: entity.rs  lib.rs
Scripts/rust-script/src/entity/: api.rs  inheritance.rs  mod.rs
Scripts/rust-script/src/projectile/: inheritance.rs  mod.rs
Scripts/rust-script/src/tag/: damage.rs  effect.rs  equipment.rs  mod.rs
(+5 files in other folders)
