[package]
name = "rust-script"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
enumset = "1.1.5"
godot = { version = "0.2.3", features = ["api-4-3"] }
rustc-hash = "2.1.1"
strum = { version = "0.27", features = ["derive"] }
uuid = { version = "1.13.1", features = ["v4"] }
